fix: word wrap: post page

--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -35,11 +35,9 @@
 
     ul {
       padding-left: 1.5rem;
-      li, a {
+      li {
         margin: 0.5rem 0;
-        a {
-          margin: 0;
-        }
+        word-wrap: break-word;
       }
     }
 
